--- a/pppppp/View/AuthView/SignInWithApple/SignInWithAppleView.storyboard
+++ b/pppppp/View/AuthView/SignInWithApple/SignInWithAppleView.storyboard
@@ -37,9 +37,9 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xlK-eS-eaB">
-                                <rect key="frame" x="38" y="754" width="314" height="33.333333333333371"/>
+                                <rect key="frame" x="99.666666666666686" y="754" width="191" height="33.333333333333371"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" image="envelope.fill" catalog="system" title="Sign in with Email(Beta User Only)" imagePadding="8">
+                                <buttonConfiguration key="configuration" style="plain" image="envelope.fill" catalog="system" title="Sign in with Email" imagePadding="8">
                                     <fontDescription key="titleFontDescription" type="system" weight="medium" pointSize="16"/>
                                     <color key="baseForegroundColor" white="1" alpha="0.47999999999999998" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </buttonConfiguration>
