--- a/pppppp/View/DashboardView/SanitasGraphView/SanitasView.storyboard
+++ b/pppppp/View/DashboardView/SanitasGraphView/SanitasView.storyboard
@@ -73,7 +73,7 @@
                                             <color key="baseForegroundColor" red="0.52156862749999999" green="0.62745098040000002" blue="0.7725490196" alpha="1" colorSpace="calibratedRGB"/>
                                         </buttonConfiguration>
                                         <connections>
-                                            <action selector="sceneHealthDataView" destination="i61-BL-DWj" eventType="touchUpInside" id="ERV-Yk-pYO"/>
+                                            <action selector="sceneRecordDataView" destination="i61-BL-DWj" eventType="touchUpInside" id="ERV-Yk-pYO"/>
                                         </connections>
                                     </button>
                                 </subviews>
