--- a/pppppp/View/UserDataView/MyData/ProfileView.storyboard
+++ b/pppppp/View/UserDataView/MyData/ProfileView.storyboard
@@ -69,6 +69,11 @@
                                 </collectionViewFlowLayout>
                                 <cells/>
                             </collectionView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PgF-Ij-gn2">
+                                <rect key="frame" x="0.0" y="294" width="390" height="467"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" red="0.57254901960000004" green="0.69803921570000005" blue="0.82745098039999998" alpha="0.6437293046" colorSpace="custom" customColorSpace="calibratedRGB"/>
+                            </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Gji-DF-TMj">
                                 <rect key="frame" x="0.0" y="294" width="390" height="467"/>
                                 <subviews>
@@ -123,6 +128,7 @@
                                 <segments>
                                     <segment title="Activity"/>
                                     <segment title="FriendList"/>
+                                    <segment title="StepGlaph"/>
                                 </segments>
                                 <color key="tintColor" red="1" green="1" blue="1" alpha="0.84999999999999998" colorSpace="custom" customColorSpace="sRGB"/>
                                 <connections>
@@ -162,6 +168,7 @@
                         <constraints>
                             <constraint firstItem="A8q-9m-zwg" firstAttribute="bottom" secondItem="Gji-DF-TMj" secondAttribute="bottom" id="3YY-K6-WdA"/>
                             <constraint firstItem="A8q-9m-zwg" firstAttribute="trailing" secondItem="CQd-fR-N3q" secondAttribute="trailing" constant="24" id="3vl-E1-4s8"/>
+                            <constraint firstItem="A8q-9m-zwg" firstAttribute="bottom" secondItem="PgF-Ij-gn2" secondAttribute="bottom" id="5df-qz-py9"/>
                             <constraint firstItem="A8q-9m-zwg" firstAttribute="trailing" secondItem="taJ-vF-fMd" secondAttribute="trailing" constant="16" id="6Jl-eE-hK4"/>
                             <constraint firstItem="iSb-Ii-EMn" firstAttribute="centerY" secondItem="taJ-vF-fMd" secondAttribute="centerY" id="7rp-L3-Ubw"/>
                             <constraint firstItem="Gji-DF-TMj" firstAttribute="top" secondItem="CQd-fR-N3q" secondAttribute="bottom" constant="20" id="CDo-yy-8BN"/>
@@ -171,12 +178,15 @@
                             <constraint firstItem="iSb-Ii-EMn" firstAttribute="top" secondItem="A8q-9m-zwg" secondAttribute="top" constant="8" id="U6e-VE-Hvv"/>
                             <constraint firstItem="CQd-fR-N3q" firstAttribute="leading" secondItem="A8q-9m-zwg" secondAttribute="leading" constant="24" id="V9e-a1-QSi"/>
                             <constraint firstItem="qIj-nq-XZN" firstAttribute="top" secondItem="HJr-r8-Ssq" secondAttribute="topMargin" constant="8" id="Yfo-G7-hFR"/>
+                            <constraint firstItem="PgF-Ij-gn2" firstAttribute="leading" secondItem="HJr-r8-Ssq" secondAttribute="leading" id="ZXH-2i-Dwy"/>
                             <constraint firstItem="CQd-fR-N3q" firstAttribute="top" secondItem="iSb-Ii-EMn" secondAttribute="bottom" constant="20" id="cSC-OT-nqS"/>
                             <constraint firstItem="ENr-7I-fkB" firstAttribute="leading" secondItem="A8q-9m-zwg" secondAttribute="leading" id="eAN-UK-E1n"/>
                             <constraint firstItem="qIj-nq-XZN" firstAttribute="leading" secondItem="iSb-Ii-EMn" secondAttribute="trailing" constant="16" id="fhs-Zp-RSl"/>
+                            <constraint firstItem="PgF-Ij-gn2" firstAttribute="top" secondItem="CQd-fR-N3q" secondAttribute="bottom" constant="20" id="jS1-it-RKT"/>
                             <constraint firstItem="ENr-7I-fkB" firstAttribute="top" secondItem="CQd-fR-N3q" secondAttribute="bottom" constant="20" id="mmH-Zb-yBW"/>
                             <constraint firstItem="Gji-DF-TMj" firstAttribute="trailing" secondItem="A8q-9m-zwg" secondAttribute="trailing" id="wpj-GD-nos"/>
                             <constraint firstItem="A8q-9m-zwg" firstAttribute="bottom" secondItem="ENr-7I-fkB" secondAttribute="bottom" id="z4M-QH-4Sj"/>
+                            <constraint firstItem="PgF-Ij-gn2" firstAttribute="trailing" secondItem="HJr-r8-Ssq" secondAttribute="trailing" id="znv-ok-XHZ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Profile" largeTitleDisplayMode="always" id="dMA-qW-h1S">
@@ -202,6 +212,7 @@
                         <outlet property="friendcollectionView" destination="ENr-7I-fkB" id="XK4-wB-Mce"/>
                         <outlet property="myIconView" destination="iSb-Ii-EMn" id="0Fo-K0-UB2"/>
                         <outlet property="myNameLabel" destination="qIj-nq-XZN" id="Iu2-qn-orw"/>
+                        <outlet property="stepChartsView" destination="PgF-Ij-gn2" id="wWh-4A-HYI"/>
                         <outlet property="tableView" destination="J3b-i7-ahx" id="hT1-F1-GIS"/>
                     </connections>
                 </viewController>
