--- a/pppppp/View/UserDataView/MyData/ProfileView.storyboard
+++ b/pppppp/View/UserDataView/MyData/ProfileView.storyboard
@@ -77,8 +77,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PgF-Ij-gn2">
                                 <rect key="frame" x="0.0" y="290" width="390" height="471"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c9j-Qa-PwP">
-                                        <rect key="frame" x="24" y="16" width="54" height="20"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c9j-Qa-PwP">
+                                        <rect key="frame" x="24" y="16" width="0.0" height="0.0"/>
                                         <fontDescription key="fontDescription" name="F5.6-Regular" family="F5.6" pointSize="16"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
