--- a/pppppp/View/OnboardingView/OnboardingView3/OnboardingView3.storyboard
+++ b/pppppp/View/OnboardingView/OnboardingView3/OnboardingView3.storyboard
@@ -26,7 +26,7 @@
                                     <constraint firstAttribute="height" constant="444" id="iFK-Us-uGx"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQY-mH-XKG">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hQY-mH-XKG">
                                 <rect key="frame" x="16" y="682" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="40"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -75,6 +75,7 @@
                     </view>
                     <connections>
                         <outlet property="backButtonLayout" destination="0Ff-gf-RZq" id="SRk-Yc-oWj"/>
+                        <outlet property="messageLabel" destination="hQY-mH-XKG" id="mo6-fg-5nZ"/>
                         <outlet property="nextButtonLayout" destination="dUx-mH-y87" id="oHA-xI-4Rk"/>
                     </connections>
                 </viewController>
